apps/base/zionup/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: zionup-production
  labels:
    app: zionup
    environment: production
